--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/dependency-injection":  ">=2.0.0,<2.2.0-dev",
         "symfony/event-dispatcher":      ">=2.0.0,<2.2.0-dev",
         "symfony/translation":           ">=2.0.0,<2.2.0-dev",
-        "symfony/yaml":                  ">=2.0.0,<2.2.0-dev",
+        "symfony/yaml":                  "*",
         "symfony/finder":                ">=2.0.0,<2.2.0-dev"
     },
 
