--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     "require": {
         "php":                           ">=5.3.1",
         "behat/gherkin":                 "*",
-        "symfony/console":               ">=2.0.0,<2.2.0-dev",
-        "symfony/config":                ">=2.0.0,<2.2.0-dev",
-        "symfony/dependency-injection":  ">=2.0.0,<2.2.0-dev",
-        "symfony/event-dispatcher":      ">=2.0.0,<2.2.0-dev",
-        "symfony/translation":           ">=2.0.0,<2.2.0-dev",
+        "symfony/console":               "*",
+        "symfony/config":                "*",
+        "symfony/dependency-injection":  "*",
+        "symfony/event-dispatcher":      "*",
+        "symfony/translation":           "+",
         "symfony/yaml":                  "*",
-        "symfony/finder":                ">=2.0.0,<2.2.0-dev"
+        "symfony/finder":                "*"
     },
 
     "suggest": {
